accordion collapsed issue fix

--- a/assets/sass/components/_accordion.scss
+++ b/assets/sass/components/_accordion.scss
@@ -30,7 +30,6 @@
       }
       &.collapsed {
         border-bottom: 1px solid #d9d9d9;
-        margin-bottom: 20px;
         padding-left: 0;
         &::after {
           content: '+';
